--- a/custom_components/bambu_lab/manifest.json
+++ b/custom_components/bambu_lab/manifest.json
@@ -7,12 +7,12 @@
   "config_flow": true,
   "dependencies": [
     "device_automation",
-    "http",
-    "websocket_api",
     "ffmpeg",
-    "mqtt",
     "frontend",
-    "lovelace"
+    "http",
+    "lovelace",
+    "mqtt",
+    "websocket_api"
   ],
   "documentation": "https://github.com/greghesp/ha-bambulab",
   "iot_class": "local_push",
@@ -26,5 +26,5 @@
       "st": "urn:bambulab-com:device:3dprinter:1"
     }
   ],  
-  "version": "2.1.7"
+  "version": "2.1.10"
 }
