update custom_components/ via HACS

--- a/custom_components/envisalink_new/manifest.json
+++ b/custom_components/envisalink_new/manifest.json
@@ -11,5 +11,5 @@
   "dependencies": [],
   "codeowners": ["@ufodone"],
   "iot_class": "local_push",
-  "version": "1.1.0-uno-beta2"
+  "version": "1.1.0"
 }
