--- a/packages/cleaning/common_cleaning.yaml
+++ b/packages/cleaning/common_cleaning.yaml
@@ -3,3 +3,5 @@
 input_boolean:
   floor_disaster_zone:
     name: Floor disaster zone
+  rockrobo_floor_disaster_zone:
+    name: Rockrobo Floor disaster zone
