--- a/packages/appliances/3dprinter/bambu_x1c_legend.yaml
+++ b/packages/appliances/3dprinter/bambu_x1c_legend.yaml
@@ -35,57 +35,58 @@ automation:
               entity_id: switch.bento_box_bento_box
 
   ## Notifications
-  - alias: Legend stage change
-    trigger:
-      - platform: state
-        entity_id: sensor.x1c_00m09a363000342_current_stage
-        not_to: ["unavailable", "unknown", "offline", "heatbed_preheating", "auto_bed_leveling", "cleaning_nozzle_tip", "calibrating_extrusion"]
-    condition:
-      - condition: not
-        conditions:
-          - condition: or
-            conditions:
-              - condition: template
-                value_template: >
-                  {{ trigger.from_state.state == 'offline' and trigger.to_state.state == 'idle' }}
-              - condition: template
-                value_template: >
-                  {{ trigger.from_state.state == 'idle' and trigger.to_state.state == 'idofflinele' }}
-    action:
-      - choose:
-          # IF specific states, we skip the camera
-          - conditions:
-              - condition: or
-                conditions:
-                  - condition: template
-                    value_template: "{{ trigger.to_state.state in ['offline', 'auto_bed_leveling', 'heatbed_preheating',' cleaning_nozzle_tip'] }}"
-                  - condition: template
-                    value_template: "{{ trigger.to_state.state in ['calibrating_extrusion', 'printing'] }}"
-            sequence:
-              - service: script.alert
-                data:
-                  target: 'alerts-david'
-                  icon: ':printer:'
-                  object: '3D Printer'
-                  message: >
-                    Legend's stage changed to: {{ states('sensor.x1c_00m09a363000342_current_stage') }} {{- '\n' -}}
-                    Remaining Time: {{ states('sensor.x1c_00m09a363000342_remaining_time') }} {{- '\n' -}}
-        # ELSE show camera
-        default:
-          - service: script.alert
-            data:
-              target: 'alerts-david'
-              icon: ':printer:'
-              object: '3D Printer'
-              camera: 'camera.bambu_x1c_legend'
-              message: >
-                Legend's stage changed to: {{ states('sensor.x1c_00m09a363000342_current_stage') }} {{- '\n' -}}
-                Remaining Time: {{ states('sensor.x1c_00m09a363000342_remaining_time') }} {{- '\n' -}}
+  # - alias: Legend stage change
+  #   trigger:
+  #     - platform: state
+  #       entity_id: sensor.x1c_00m09a363000342_current_stage
+  #       not_to: ["unavailable", "unknown", "offline", "heatbed_preheating", "auto_bed_leveling", "cleaning_nozzle_tip", "calibrating_extrusion"]
+  #   condition:
+  #     - condition: not
+  #       conditions:
+  #         - condition: or
+  #           conditions:
+  #             - condition: template
+  #               value_template: >
+  #                 {{ trigger.from_state.state == 'offline' and trigger.to_state.state == 'idle' }}
+  #             - condition: template
+  #               value_template: >
+  #                 {{ trigger.from_state.state == 'idle' and trigger.to_state.state == 'idofflinele' }}
+  #   action:
+  #     - choose:
+  #         # IF specific states, we skip the camera
+  #         - conditions:
+  #             - condition: or
+  #               conditions:
+  #                 - condition: template
+  #                   value_template: "{{ trigger.to_state.state in ['offline', 'auto_bed_leveling', 'heatbed_preheating',' cleaning_nozzle_tip'] }}"
+  #                 - condition: template
+  #                   value_template: "{{ trigger.to_state.state in ['calibrating_extrusion', 'printing'] }}"
+  #           sequence:
+  #             - service: script.alert
+  #               data:
+  #                 target: 'alerts-david'
+  #                 icon: ':printer:'
+  #                 object: '3D Printer'
+  #                 message: >
+  #                   Legend's stage changed to: {{ states('sensor.x1c_00m09a363000342_current_stage') }} {{- '\n' -}}
+  #                   Remaining Time: {{ states('sensor.x1c_00m09a363000342_remaining_time') }} {{- '\n' -}}
+  #       # ELSE show camera
+  #       default:
+  #         - service: script.alert
+  #           data:
+  #             target: 'alerts-david'
+  #             icon: ':printer:'
+  #             object: '3D Printer'
+  #             camera: 'camera.bambu_x1c_legend'
+  #             message: >
+  #               Legend's stage changed to: {{ states('sensor.x1c_00m09a363000342_current_stage') }} {{- '\n' -}}
+  #               Remaining Time: {{ states('sensor.x1c_00m09a363000342_remaining_time') }} {{- '\n' -}}
 
   - alias: Legend status change
     trigger:
       - platform: state
         entity_id: sensor.x1c_00m09a363000342_print_status
+        not_from: ["unavailable", "unknown", "offline"]
         not_to: ["unavailable", "unknown", "prepare", "running", "idle", "offline"]
     action:
       - choose:
@@ -136,7 +137,7 @@ automation:
                       - condition: template
                         value_template: "{{ 1 == count }}"
                       - condition: template
-                        value_template: "{{ state_attr('binary_sensor.x1c_00m09a363000342_hms_errors', '1-Error') != 'HMS_0C00_0300_0003_000B: Inspecting first layer.' }}"
+                        value_template: "{{ 'Inspecting the first layer' not in state_attr('binary_sensor.x1c_00m09a363000342_hms_errors', '1-Error') }}"
             sequence:
               - service: script.alert
                 data:
