update custom_components/ via HACS

--- a/custom_components/bambu_lab/manifest.json
+++ b/custom_components/bambu_lab/manifest.json
@@ -18,13 +18,12 @@
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/greghesp/ha-bambulab/issues",
   "requirements": [
-    "beautifulsoup4",
-    "cloudscraper"
+    "beautifulsoup4"
   ],
   "ssdp": [
     {
       "st": "urn:bambulab-com:device:3dprinter:1"
     }
   ],  
-  "version": "2.1.16"
+  "version": "2.1.21"
 }
