--- a/packages/lighting/automations/light_motion_mainbedroom.yaml
+++ b/packages/lighting/automations/light_motion_mainbedroom.yaml
@@ -86,6 +86,8 @@ automation:
               {{1*60|int}}
             {% elif '05:30' <= time <= '07:29' %}
               {{15*60|int}}
+            {% elif '04:40' <= time <= '05:30' and is_state('binary_sensor.either_parent_phones_charging','off') %}
+              {{15*60|int}}
             {% else %}
               {{2*60|int}}
             {%- endif -%}
