--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,7 @@ secrets.yaml
 .vscode/
 appdaemon/compiled
 appdaemon/dashboards/
+.ha_run.lock
 home-assistant_v2.db
 home-assistant_v2.db-shm
 home-assistant_v2.db-wal
